# bvr_chirp

./: Cargo.toml  LICENSE  README.md  bvr_chirp.cfg.sample  rumqttd_example.toml
src/: bvr_chirp_config.rs  bvr_chirp_message.rs  clients.rs  discord_client.rs  main.rs  matrix_client.rs  message_templates.rs  mqtt_client.rs
src/clients/: discord_client.rs  matrix_client.rs  mqtt_client.rs  slack_client.rs
