[package]
name = "bvr_chirp"
version = "0.1.0"
edition = "2021"

[dependencies]
confy = "0.6.1"
serde_json = "1.0.125"
serenity = "0.12.2"
rumqttc = "0.24.0"
matrix-sdk = "0.7.1"
tokio = { version = "1.39.3", features = ["rt", "rt-multi-thread", "macros"] }
time = "0.3.36"
base64 = "0.22.1"
url = "2.5.2"
mime = "0.3.17"
serde = { version = "1.0.208", features = ["derive"] }
anyhow = "1.0.86"
